Simplify parameters